# Hachiware-Desktop-Pet

./: .gitignore  README.md  build_rag_db.py  check.py  desktop_pet.py  draw_heart.py  pyproject.toml  requirements.txt  test_ai.py  xiaoba_art.py
chroma_db_storage/: chroma.sqlite3
knowledge_base/: test_copy.txt
src/: config_example.py  desktop_pet.py  tools_logic.py  vision.py  wechat_skill.py
test/: gui_test.py  wechat_collect_test.py
